# solaris-alpha

./: .gitignore  README.md  pyproject.toml  requirements.txt
scripts/: solaris_datgen.sql
src/: __init__.py  main.py
src/lib/: database.py  excel_export.py  file_reader.py  funcs.py  logger.py
src/model/: admin.py  client.py
