[tool.poetry]
name = "solaris-alpha"
version = "0.1.0"
description = ""
authors = ["Muhammad Bilal Khan <lofi.audit@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.9.2"
rich = "^13.9.2"
python-dotenv = "^1.0.1"
requests = "^2.32.3"
numpy = "^2.1.2"
pandas = "^2.2.3"
typer = "^0.12.5"
openpyxl = "^3.1.5"
mysql-connector-python = "^9.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
